modify newInstance() from the type Class<> is deprecated since version 9